# http-server

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_gui.sh  run  tests.c
.github/workflows/: make.yml
gui/: build.sh  functions.h  main.cpp  window.cpp  window.fl  window.h
res/: more-references.html
src/: folders.c  logger.c  logger_test.c  main.c  parser.c  parser.h  parser_test.c  server.c  server.h  utils.c  utils.h
